Add support for custom keywords for twitter api

--- a/functions/playground.ipynb
+++ b/functions/playground.ipynb
@@ -64,7 +64,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>De maatregelen die we nemen, zijn voor iederee...</td>\n",
-       "      <td>17</td>\n",
+       "      <td>18</td>\n",
        "      <td>recent</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -76,7 +76,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>We mogen niet immuun worden voor het leed dat ...</td>\n",
-       "      <td>23</td>\n",
+       "      <td>24</td>\n",
        "      <td>recent</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -157,9 +157,9 @@
       ],
       "text/plain": [
        "                                            full_text  retweet_count  \\\n",
-       "0   De maatregelen die we nemen, zijn voor iederee...             17   \n",
+       "0   De maatregelen die we nemen, zijn voor iederee...             18   \n",
        "1   Complimenten aan @ggdkennemerland voor het ade...              8   \n",
-       "2   We mogen niet immuun worden voor het leed dat ...             23   \n",
+       "2   We mogen niet immuun worden voor het leed dat ...             24   \n",
        "3   Samen met @GGDGHORNL en @rivm doen we alles om...             21   \n",
        "4   Zometeen de persconferentie door @minpres en m...             11   \n",
        "5   De situatie in de zorg is zorgelijk. Vandaag h...             24   \n",
@@ -197,26 +197,104 @@
     }
    ],
    "source": [
-    "twitter_api.search(\"\")"
+    "twitter_api.search([])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'iso_language_code': 'nl', 'result_type': 'recent'}"
+       "'-@HelloWorld'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Keyword:\n",
+    "    value: str\n",
+    "    isNegated: bool\n",
+    "\n",
+    "    def get_processed_value(self):\n",
+    "        new_keyword = \"-\" if self.isNegated else \"\"\n",
+    "\n",
+    "        if self.value == \"replies\":\n",
+    "            new_keyword += \"filter:replies\"\n",
+    "        elif self.value.startswith(\"from:\"):\n",
+    "            new_keyword += self.value.replace(\" \", \"\")\n",
+    "        elif self.value.startswith(\"#\"):\n",
+    "            new_keyword += self.value.replace(\" \", \"\")\n",
+    "        elif self.value.startswith(\"@\"):\n",
+    "            new_keyword += self.value.replace(\" \", \"\")\n",
+    "        else:\n",
+    "            new_keyword += f\"'{self.value.value}'\"\n",
+    "\n",
+    "        return new_keyword\n",
+    "\n",
+    "keyword = Keyword(\"@Hello World\", True)\n",
+    "keyword.get_processed_value()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lang': 'nl',\n",
+       " 'tweet_mode': 'extended',\n",
+       " 'q': '(from:hugodejonge -filter:replies) OR (from:hugodejonge -filter:replies)'}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def create_params(keyword_groups: list[list[Keyword]]):\n",
+    "    query_params = {\n",
+    "        \"lang\":\"nl\", \n",
+    "        \"tweet_mode\": \"extended\"\n",
+    "    }\n",
+    "\n",
+    "    query = \"\"\n",
+    "\n",
+    "    for index,group in enumerate(keyword_groups):\n",
+    "        if index > 0 and index != len(keyword_groups):\n",
+    "            query += \" OR \"\n",
+    "        query += \"(\"\n",
+    "        for index,keyword in enumerate(group):\n",
+    "            query += keyword.get_processed_value()\n",
+    "            if index < len(group) - 1:\n",
+    "                query += \" \"\n",
+    "        query += \")\"\n",
+    "\n",
+    "    query_params[\"q\"] = query\n",
+    "    return query_params\n",
+    "\n",
+    "create_params([\n",
+    "    [\n",
+    "        Keyword(\"from:hugodejonge\", False),\n",
+    "        Keyword(\"replies\", True),\n",
+    "    ],\n",
+    "    [\n",
+    "        Keyword(\"from:hugodejonge\", False),\n",
+    "        Keyword(\"replies\", True),\n",
+    "    ]\n",
+    "])"
+   ]
   },
   {
    "cell_type": "code",
